--- a/k8s/service-account.yaml
+++ b/k8s/service-account.yaml
@@ -1,7 +1,7 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: snowguard
+  name: skiguard
   labels:
-    tier: snowguard
-    release: snowguard
+    tier: skiguard
+    release: skiguard
