--- a/docs/slackbot-manifest.json
+++ b/docs/slackbot-manifest.json
@@ -1,13 +1,13 @@
 {
     "display_information": {
-        "name": "Snowguard",
+        "name": "Skiguard",
         "description": "Snowflake security monitoring app",
         "background_color": "#0f0f0f",
-        "long_description": "Snowguard monitors Snowflake for abnormal activity and posts alerts to slack for awareness. The following Snowflake activity is monitored.\r\n\r\n* User Deletion\r\n* User Creation\r\n* Number of rows copied out of Snowflake\r\n* Number of copy actions out of Snowflake\r\n* Failed Logins\r\n* Total Logins"
+        "long_description": "Skiguard monitors Snowflake for abnormal activity and posts alerts to slack for awareness. The following Snowflake activity is monitored.\r\n\r\n* User Deletion\r\n* User Creation\r\n* Number of rows copied out of Snowflake\r\n* Number of copy actions out of Snowflake\r\n* Failed Logins\r\n* Total Logins"
     },
     "features": {
         "bot_user": {
-            "display_name": "Snowguard",
+            "display_name": "Skiguard",
             "always_online": true
         }
     },
